# coinvwap

./: .gitignore  .pylintrc  IMPROVEMENTS.md  README.md  mkdocs.yaml  pyproject.toml  setup.cfg
docs/: changelog.md  index.md
scripts/: run_tests.sh
src/: coinvwap.py  handshake.py  main.py  payload.py  subscribe.py  vwap.py
src/tests/: test_coinvwap.py  test_integration.py  test_main.py  test_payload.py  test_subscribe.py  test_vwap.py  test_vwap_performance.py
src/tests/data/: recv.stream_sample
