[tool.poetry]
name = "coinvwap"
version = "0.1.0"
description = ""
authors = ["Maciej <mw@iceam.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
pylint = "^2.12.2"
isort = "^5.10.1"
pytest-black = "^0.3.12"
pytest-pylint = "^0.18.0"
pytest-coverage = "^0.0"
mkdocs = "^1.2.3"
coverage-badge = "^1.1.0"
gitchangelog = "^3.0.4"
mkdocs-material = "^8.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
